2018-08-16 Massimo Manghi <mxmanghi@apache.org>
    * rivet/rivet-tcl/xml.tcl: now printing XML elements such as
    <tag attr1="val1" attr2="val2".... /> if the text string is empty

2018-08-07 Massimo Manghi <mxmanghi@apache.org>
    * VERSION,configure.ac: first commit after svn to git migration.
    The trunk branch is now the master branch of the git repository.
    setting the master branch version as 3.1.0.
    * .gitignore: untracking Makefile.in and putting in .gitignore
    autools generated files
    * doc/rivet.xml.in: removing references to now unsupported 
    svn keywords substitutions

2018-06-25 Massimo Manghi <mxmanghi@apache.org>
    * rivet/init.tcl.in: the error handler of error scripts requires
    ::Rivet::script to keep the actual 'script' being run 
    (reintegrated into trunk from branches/3.0)

2018-06-18 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/dio/*.tcl: fully qualifying calls to ::rivet::lempty

2018-06-14 Massimo Manghi <mxmanghi@apache.org>
    * rivet/init.tcl: fixed bug in error scripts' error handling (the
    case of handling an error that occurs in the default error script may
    need the introduction of a new test

2018-04-09 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet_ng/mod_rivet.h: changing argument list of function
    *mpm_thread_interp in the bridge interface. It must work
    as an accessor to the interpreter database when both getting
    and storing an interpreter pointer

2018-02-28 Massimo Manghi <mxmanghi@apache.org>
    * Makefile.am: default_request_handler.tcl and init.tcl can be
    installed without the exec bit set

2018-02-17 Massimo Manghi <mxmanghi@apache.org>
    * NOTICE: update copyright statement
    * src/mod_rivet_ng/worker_prefork_common.c: Rivet_CleanupProcessor
    to call RivetCache_Cleanup
    * doc/rivet.xml: new version in docs

2018-02-08 Massimo Manghi <mxmanghi@apache.org>
    * VERSION,configure.ac: bumping version to 3.0.2
